# gq-terminal

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: file.txt
examples/: basic_usage.py  data_logger.py  realtime_monitor.py
src/gq_terminal/: __init__.py  __main__.py  cli.py  interface.py
src/gq_terminal/examples/: basic_usage.py  data_logger.py  realtime_monitor.py
tests/: conftest.py  test_cli.py  test_protocol.py
tools/: diagnose.py
